--- a/main.html
+++ b/main.html
@@ -334,7 +334,7 @@
                         </div>
                         <div class="accordion-content">
                             <p>
-                                Каким/какой вы бы хотели быть?
+                                От 1 до 10 насколько искренне, честно, открыто ты отвечал(а) на вопросы?
                             </p>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                         </div>
                         <div class="accordion-content">
                             <p>
-                                Как бы вы хотели умереть?
+                                Может, у тебя возникли какие-то вопросы?:)
                             </p>
                         </div>
                     </div>
