--- a/main.html
+++ b/main.html
@@ -334,7 +334,7 @@
                         </div>
                         <div class="accordion-content">
                             <p>
-                                От 1 до 10 насколько искренне, честно, открыто ты отвечал(а) на вопросы?
+                                От 1 до 10 насколько искренне, честно и открыто ты отвечал(а) на вопросы?
                             </p>
                         </div>
                     </div>
